apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'

android {
  namespace 'com.airbnb.epoxy.integrationtest'

  defaultConfig {
    applicationId "com.airbnb.epoxy.integrationtest"
    compileSdk rootProject.COMPILE_SDK_VERSION
    minSdkVersion rootProject.MIN_SDK_VERSION
    targetSdkVersion rootProject.TARGET_SDK_VERSION
    vectorDrawables.useSupportLibrary = true
    versionCode 1
    versionName "1.0"
  }

  dataBinding {
    enabled = true
  }

  testOptions {
    unitTests {
      includeAndroidResources = true
      all {
        jvmArgs(
            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
        )
      }
    }
  }
}

kotlin {
  jvmToolchain(17)
}

dependencies {
  implementation rootProject.deps.androidAppcompat
  implementation rootProject.deps.androidFragmentTesting
  implementation rootProject.deps.androidPagingComponent
  implementation rootProject.deps.androidRecyclerView
  implementation rootProject.deps.lifecycleViewmodel
  implementation rootProject.deps.lifecycleViewmodelKtx
  implementation project(':epoxy-adapter')
  implementation project(':epoxy-annotations')
  implementation project(':epoxy-databinding')
  implementation project(':epoxy-viewbinder')

  kapt project(':epoxy-processor')

  testImplementation rootProject.deps.robolectric
  testImplementation rootProject.deps.junit
  testImplementation rootProject.deps.mockito
  testImplementation rootProject.deps.androidTestCore
  testImplementation rootProject.deps.androidTestExtJunitKtx
  testImplementation rootProject.deps.androidEspressoCore
}

repositories {
  mavenCentral()
}
